@@ -4,8 +4,7 @@ from PySide6 import QtCore
 from src import universal
 
 def loadFonts():
-    
-    fontDir = os.path.join(universal.Paths.assetsPath, "fonts")
+    fontDir = os.path.join(universal.Paths.ASSETSPATH, "fonts")
     urbanist = os.path.join(fontDir, "Urbanist", "Urbanist-VariableFont_wght.ttf")
     Icons = os.path.join(fontDir, "Material_Symbols_Rounded", "MaterialSymbolsRounded-VariableFont_FILL,GRAD,opsz,wght.ttf")
     qf = QFontDatabase()
