@@ -7,5 +7,7 @@ class Paths:
     QMLPATH = os.path.abspath(os.path.join("qml") if __compiled__ else os.path.join("src", "app", "qml"))
     ROOTPATH = os.path.abspath(".")
     
+    DATAPATH = os.path.abspath(os.path.join("data"))
+    
     SETTINGSPATH = os.path.join(ROOTPATH, "settings.json")
     VERSIONPATH = os.path.join(ROOTPATH, "version.txt")
